--- a/style.css
+++ b/style.css
@@ -1,42 +1,49 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-}
-
 body {
-    background-color: #262697;
-
+    background-color: #0f1b8b;
+    font: 13pt Arial;
+    text-align: center;
 }
 
 main {
-    background-color: white;
-    width: 560px;
+    background-color: #f2f2f2ac;
+    width: 500px;
+    padding: 8px;
     margin: auto;
-    padding: 10px;
-    box-shadow: 3px 3px 5px rgba(2, 54, 19, 0.473);
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px #00000087;
 }
 
 h1 {
-    font-size: 2em;
-    color: rgb(206, 252, 146);
+    color: #04BF55;
 }
 
 h2 {
-    font-size: 1.5em;
-    color: rgb(26, 107, 2);
+    color: #04BF55;
 }
 
-img.lado {
-    float: right;
+aside {
+    display: block; 
+    font-size: 10pt;
+    text-align: justify;
+    background-color: #f2f2f2c4;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
-a {
-    text-decoration: none;
-    font-weight: bold;
-    color: rgb(179, 247, 190);
+aside img {
+    width: 60px; 
+    display: block; 
+    float: left;
+    margin-right: 10px;
+}
+
+a, a:visited {
+    color: #F2F2F2;
+    font-weight: bolder;
 }
 
 a:hover {
-    text-decoration: underline;
-    color: rgb(26, 26, 255);
+    color: darkgoldenrod;
+    text-decoration: none;
 }
