--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@
 --------------------------------------------------------------*/
 
 body {
-  background: #fff;
-  color: #666666;
+  background: #11014d;
+  color: #faf9f9;
   font-family: "Open Sans", sans-serif;
 }
 
 a {
-  color: #18d26e;
+  color: #cc6800;
   transition: 0.5s;
 }
 
@@ -50,7 +50,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #18d26e;
+  background: #cc6800;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -79,7 +79,7 @@ h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: #11014d;
 }
 
 #preloader:before {
@@ -88,7 +88,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #cc6800;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -161,7 +161,7 @@ h6 {
 #header #logo h1 a:hover {
   color: #fff;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #cc6800;
 }
 
 #header #logo img {
@@ -301,12 +301,12 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #cc6800;
 }
 
 #intro .btn-get-started:hover {
   background: #fff;
-  color: #18d26e;
+  color: #cc6800;
 }
 
 
@@ -434,7 +434,7 @@ h6 {
 
 .nav-menu li:hover > a,
 .nav-menu > .menu-active > a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 .nav-menu > li {
@@ -462,7 +462,7 @@ h6 {
 }
 
 .nav-menu ul li:hover > a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 .nav-menu ul ul {
@@ -531,7 +531,7 @@ h6 {
 }
 
 #mobile-nav ul li a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-nav ul li li {
@@ -539,7 +539,7 @@ h6 {
 }
 
 #mobile-nav ul li.menu-active a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-nav ul .menu-has-children i {
@@ -552,7 +552,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -560,7 +560,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-body-overly {
@@ -597,7 +597,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .section-header h3 {
   font-size: 32px;
-  color: #111;
+  color: #fcf9f9;
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
@@ -623,7 +623,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #cc6800;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -631,14 +631,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 .section-header p {
   text-align: center;
   padding-bottom: 30px;
-  color: #333;
+  color: #f8f8f8;
 }
 
 /* Section with background
 --------------------------------*/
 
 .section-bg {
-  background: #f7f7f7;
+  background: #11014d;
 }
 
 /* Featured Services Section
@@ -657,7 +657,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services i {
-  color: #18d26e;
+  color: #cc6800;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -674,7 +674,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #featured-services p {
@@ -731,7 +731,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding-top: 8px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #cc6800;
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
@@ -752,7 +752,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col:hover i {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #about .about-col h2 {
@@ -769,7 +769,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #about .about-col p {
@@ -798,7 +798,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .icon i {
-  color: #18d26e;
+  color: #cc6800;
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -816,7 +816,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #services .description {
@@ -861,8 +861,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #cc6800;
+  border: 2px solid #cc6800;
 }
 
 /* Call To Action Section
@@ -928,7 +928,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #facts .counters p {
@@ -975,7 +975,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #cc6800;
   color: #fff;
 }
 
@@ -1035,7 +1035,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #cc6800;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -1084,7 +1084,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1130,7 +1130,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #clients .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #cc6800;
 }
 
 /* Testimonials Section
@@ -1204,7 +1204,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #cc6800;
 }
 
 /* Team Section
@@ -1284,7 +1284,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #team .member .social i {
@@ -1308,7 +1308,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #contact .contact-info address,
@@ -1322,15 +1322,15 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 15px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #999;
+  color: #faf8f8;
 }
 
 #contact .contact-info a {
-  color: #000;
+  color: #f7f6f6;
 }
 
 #contact .contact-info a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #contact .contact-address,
@@ -1340,8 +1340,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form #sendmessage {
-  color: #18d26e;
-  border: 1px solid #18d26e;
+  color: #cc6800;
+  border: 1px solid #cc6800;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1382,7 +1382,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #18d26e;
+  background: #cc6800;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1422,7 +1422,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #cc6800;
 }
 
 #footer .footer-top .footer-info p {
@@ -1449,7 +1449,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #cc6800;
   color: #fff;
 }
 
@@ -1477,7 +1477,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #cc6800;
   width: 60px;
 }
 
@@ -1510,7 +1510,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #footer .footer-top .footer-contact {
@@ -1532,7 +1532,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #18d26e;
+  background: #cc6800;
   border: 0;
   width: 35%;
   padding: 6px 0;
