--- a/css/stylecopy.css
+++ b/css/stylecopy.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #cc6800;
   transition: 0.5s;
 }
 
@@ -50,7 +50,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #18d26e;
+  background: #cc6800;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -88,7 +88,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #cc6800;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -164,7 +164,7 @@ h6 {
 #header #logo h1 a:hover {
   color: #fff;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #cc6800;
 }
 
 #header #logo img {
@@ -304,12 +304,12 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #cc6800;
 }
 
 #intro .btn-get-started:hover {
   background: #fff;
-  color: #18d26e;
+  color: #cc6800;
 }
 
 
@@ -437,7 +437,7 @@ h6 {
 
 .nav-menu li:hover > a,
 .nav-menu > .menu-active > a {
-  color: #18d26e;
+  color: #cc6800;
   margin-left: 10px;
 }
 
@@ -466,7 +466,7 @@ h6 {
 }
 
 .nav-menu ul li:hover > a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 .nav-menu ul ul {
@@ -535,7 +535,7 @@ h6 {
 }
 
 #mobile-nav ul li a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-nav ul li li {
@@ -543,7 +543,7 @@ h6 {
 }
 
 #mobile-nav ul li.menu-active a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-nav ul .menu-has-children i {
@@ -556,7 +556,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -564,7 +564,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #mobile-body-overly {
@@ -627,7 +627,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #cc6800;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -661,7 +661,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services i {
-  color: #18d26e;
+  color: #cc6800;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -678,7 +678,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #featured-services p {
@@ -735,7 +735,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding-top: 8px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #cc6800;
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
@@ -756,7 +756,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col:hover i {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #about .about-col h2 {
@@ -773,7 +773,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #about .about-col p {
@@ -802,7 +802,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .icon i {
-  color: #18d26e;
+  color: #cc6800;
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -820,7 +820,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #services .description {
@@ -865,8 +865,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #cc6800;
+  border: 2px solid #cc6800;
 }
 
 /* Call To Action Section
@@ -932,7 +932,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #facts .counters p {
@@ -979,7 +979,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #cc6800;
   color: #fff;
 }
 
@@ -1039,7 +1039,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #cc6800;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -1088,7 +1088,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1134,7 +1134,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #clients .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #cc6800;
 }
 
 /* Testimonials Section
@@ -1208,7 +1208,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #cc6800;
 }
 
 /* Team Section
@@ -1288,7 +1288,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #team .member .social i {
@@ -1312,7 +1312,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #contact .contact-info address,
@@ -1334,7 +1334,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .contact-info a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #contact .contact-address,
@@ -1344,8 +1344,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form #sendmessage {
-  color: #18d26e;
-  border: 1px solid #18d26e;
+  color: #cc6800;
+  border: 1px solid #cc6800;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1386,7 +1386,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #18d26e;
+  background: #cc6800;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1426,7 +1426,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #cc6800;
 }
 
 #footer .footer-top .footer-info p {
@@ -1453,7 +1453,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #cc6800;
   color: #fff;
 }
 
@@ -1481,7 +1481,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #cc6800;
   width: 60px;
 }
 
@@ -1514,7 +1514,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #cc6800;
 }
 
 #footer .footer-top .footer-contact {
@@ -1536,7 +1536,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #18d26e;
+  background: #cc6800;
   border: 0;
   width: 35%;
   padding: 6px 0;
